--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "nextjs-new-project",
+  "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://domerackiszymon.github.io",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d .next",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
