--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gh-pages": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "animejs": "^3.2.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
