--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d .next",
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,7 +16,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fullpage/react-fullpage": "^0.1.26",
     "animejs": "^3.2.1",
+    "apollo-fetch": "^0.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
